<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SofaDetailActivity">

    <!-- Icono Back -->
    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back"
        android:contentDescription="@string/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <!-- Icono Heart -->
    <ImageView
        android:id="@+id/heartIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:contentDescription="@string/heart_icon"
        android:src="@drawable/heart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Imagen Sofá -->
    <ImageView
        android:id="@+id/sofaImage"
        android:layout_width="0dp"
        android:layout_height="270dp"
        android:src="@drawable/chair2"
        app:layout_constraintTop_toBottomOf="@+id/backIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/chair" />

    <!-- Título Sofá -->
    <TextView
        android:id="@+id/sofaTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/room_sofa"
        android:textSize="24sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/sofaImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Descripción Sofá -->
    <TextView
        android:id="@+id/sofaDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/descripci_nsofa"
        android:textSize="16sp"
        android:textColor="#555555"
        app:layout_constraintTop_toBottomOf="@+id/sofaTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        tools:ignore="VisualLintLongText" />

    <!-- Precio Sofá -->
    <TextView
        android:id="@+id/sofaPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/value57000"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/sofaDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBuy"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"/>

    <!-- Botón Comprar -->
    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#748EA9"
        android:text="@string/comprar"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sofaDescription"
        tools:ignore="TextContrastCheck" />


    <!-- Barra de navegación inferior -->
    <LinearLayout
        android:id="@+id/bottomNavigationBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Icono 1 (Home) -->
        <ImageView
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/home"
            android:contentDescription="@string/home"/>

        <!-- Icono 2 (Heart) -->
        <ImageView
            android:id="@+id/heart"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/heart"
            android:contentDescription="@string/heart"/>

        <!-- Icono 3 (Carrito) -->
        <ImageView
            android:id="@+id/cart"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/carrito"
            android:contentDescription="@string/carrito"/>

        <!-- Icono 4 (Usuario) -->
        <ImageView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/usuario"
            android:contentDescription="@string/usuario"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>




