<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FavoritosActivity">

    <!-- Icono Back -->
    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back"
        android:contentDescription="@string/back_icon"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <!-- ListView para mostrar los productos en el carrito -->
    <ListView
        android:id="@+id/listViewfavorito"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <!-- Barra de navegación inferior -->
    <LinearLayout
        android:id="@+id/bottomNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:padding="8dp">

        <!-- Icono 1 -->
        <ImageView
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/home"
            android:contentDescription="@string/home"/>

        <!-- Icono 2 -->
        <ImageView
            android:id="@+id/heart"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/heart"
            android:contentDescription="@string/heart"/>

        <!-- Icono 3 -->
        <ImageView
            android:id="@+id/cart"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/carrito"
            android:contentDescription="@string/carrito"/>

        <!-- Icono 4 -->
        <ImageView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/usuario"
            android:contentDescription="@string/usuario"/>
    </LinearLayout>


</LinearLayout>
